# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.676 2006/09/02 23:54:46 codeman Exp $

  2 Sep 2006; Preston Cody <codeman@gentoo.org>
  Lots of internationalization fixes.  Point to a translation path called
  languages in the dialog directory.  Generated and added .pot files.
  Added gettext to GLIIP for package descriptions.

  01 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  src/GLIInstallProfile.py:
  Added some more applications to the Extra Packages list.

  1 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/ppcArchitectureTemplate.py:
  this doesn't need to inherit from x86AT or create an infinite loop by calling
  its own __init__()
  src/GLIArchitectureTemplate.py,src/templates/x86ArchitectureTemplate.py:
  move partitioning code to GLIAT

  31 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  pass quotes_around_value=False when adding default route to conf.d/net

  7 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  copy backup custom.conf from livecd if present

*GLI-0.4 (31 Jul 2006)

  31 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  Finally properly fixing the installer script. Thanks to Andrew Gaffney for
  doing the testing and coming up with the patch.

  29 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  skip blank entries/files in update_config_files()

  28 Jul 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  move logical clipping logic a bit

  27 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> bin/installer:
  I've commented out most of the code that used launch. It wasn't working and
  we don't have the time to fix it before the release. I'll look into it after
  the release and make it more robust and flexible.
