@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.676 2006/09/02 23:54:46 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.677 2006/09/03 19:59:17 agaffney Exp $
+
+  3 Sep 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  force conversion of 'mb' to long
 
   2 Sep 2006; Preston Cody <codeman@gentoo.org>
   Lots of internationalization fixes.  Point to a translation path called
